Issue #3500046 by attilatilman, wim leers, mglaman: Provide HTTP API to create a new Page content entity
